[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cemc-takler-util"
authors = [
    {name="Wang Dapeng", email="perillaroc@gmail.com"}
]
description = "Some functions to build workflows for takler in CEMC."
readme = "README.md"
keywords = ["workflow", "cemc", "takler"]
license = { text = "Apache-2.0" }
dynamic = ["version"]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',

    "Intended Audience :: Developers",

    'License :: OSI Approved :: Apache Software License',

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    'takler',
    'pydantic>=2.0',
]

[project.urls]
Homepage = "https://github.com/cemc-oper/cemc-takler-util"
Repository = "https://github.com/cemc-oper/cemc-takler-util.git"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "cemc_takler_util/_version.py"
